refactor: breaking up big interfaces

--- a/Lib/Archer.Arrow.Lib.fsproj
+++ b/Lib/Archer.Arrow.Lib.fsproj
@@ -16,6 +16,8 @@
     <Compile Include="Types.fs" />
     <Compile Include="Internals.fs" />
     <Compile Include="InternalTypes.IBuilder.fs" />
+    <Compile Include="Internal.Types.ITestBuilderBase.fs" />
+    <Compile Include="Internal.Types.ITestBuilder.fs" />
     <Compile Include="Internal.Types.IFeature.fs" />
     <Compile Include="Internal.Types.Feature.fs" />
     <Compile Include="Internal.Types.IgnoreFeature.fs" />
