refactor: breaking up bigger interfaces

--- a/Lib/Archer.Arrow.Lib.fsproj
+++ b/Lib/Archer.Arrow.Lib.fsproj
@@ -17,6 +17,7 @@
     <Compile Include="Internals.fs" />
     <Compile Include="InternalTypes.IBuilder.fs" />
     <Compile Include="Internal.Types.ITestBuilderBase.fs" />
+    <Compile Include="Internal.Types.ITestBuilderTagsSetup.fs" />
     <Compile Include="Internal.Types.ITestBuilder.fs" />
     <Compile Include="Internal.Types.IFeature.fs" />
     <Compile Include="Internal.Types.Feature.fs" />
