--- a/Lib/Archer.Arrow.Lib.fsproj
+++ b/Lib/Archer.Arrow.Lib.fsproj
@@ -19,6 +19,7 @@
     <Compile Include="Internal.Types.ITestBuilderBase.fs" />
     <Compile Include="Internal.Types.ITestBuilderTagsSetup.fs" />
     <Compile Include="Internal.Types.ITestBuilderTagsData.fs" />
+    <Compile Include="Internal.Types.ITestBuilderTags.fs" />
     <Compile Include="Internal.Types.ITestBuilder.fs" />
     <Compile Include="Internal.Types.IFeature.fs" />
     <Compile Include="Internal.Types.Feature.fs" />
