refactor: breaking up interface

--- a/Lib/Archer.Arrow.Lib.fsproj
+++ b/Lib/Archer.Arrow.Lib.fsproj
@@ -13,6 +13,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <Compile Include="Internal.Types.ITestBuilder.fs" />
     <Compile Include="Types.fs" />
     <Compile Include="Internals.fs" />
     <Compile Include="InternalTypes.IBuilder.fs" />
