--- a/Lib/Archer.Arrow.Lib.fsproj
+++ b/Lib/Archer.Arrow.Lib.fsproj
@@ -27,6 +27,7 @@
     <Compile Include="Internal.Types.ITestBuilderTagsSetup.fs" />
     <Compile Include="Internal.Types.ITestBuilderTagsData.fs" />
     <Compile Include="Internal.Types.ITestBuilder.fs" />
+    <Compile Include="Internal.Types.ITestBuilderSetup.fs" />
     <Compile Include="Internal.Types.ITestBuilderOther.fs" />
     <Compile Include="Internal.Types.IFeature.fs" />
     <Compile Include="Internal.Types.Feature.fs" />
